app/styles/app.scss
html{
  overflow-x: hidden;
}
.imageBlock{
  min-height: 150px;
}
.imageBlock img{
  width: 150px;
  height: 150px;
  margin: 0 auto;
}
.partnerBlock{
  min-height: 100px;
  background: #5c1bb7;
  margin-top: 5em;
  display: flex;
  justify-content: center;
  align-items: center;
}
.partnerBlock__images{
  margin-top: 10px;
  @media all and (max-width: 600px){
    li{
      width: 100%;
    }
  }
}
.partnerBlock__images li:nth-child(2){
  margin-left: 2em;
  margin-right: 2em;
  @media all and (max-width: 600px){
    margin: 2em 0 2em 0;
  }
}
.headerBlock{
  min-height: calc(70vh + 50px);
  display: flex;
  align-items: center;
  justify-content: center;
  background-image: linear-gradient(rgba(92,27,183, 0.75),
  rgba(238, 238, 238, 0.16)),url('/images/office.jpeg');
  background-attachment: fixed;
  background-position: center;
  background-size: cover;
  color: #fff;
  margin: 0;
  &__messageBlock{
    //margin: 2rem 0;
  }
}
.btn-brand{
  background: #5c1bb7;
  color: #fff;
}
.btn-transparent{
  background: transparent;
  border: 1px solid #fff;
}
.btn-transparent:hover{
  color: #eee;
}
.btn-brand:hover{
  color: #eee;
}
.icon-brand{
  color: #5c1bb7;
}
.redefiningWebBlock {
  background: #5c1bb7;
  color: #fff;
  padding: 2em 0 1em 0;
}
.serviceTitle{
  color: #fff;
}
@media all and (max-width: 768px){
  .navbar-default .navbar-collapse{
    background: rgba(0, 0, 0, .50);
  }
}
nav.navbar-custom{
  .navbar-toggle{
    color: #fff;
    &:hover,
    &:focus{
      background-color: #5c1bb7;
    }
  }
  background: transparent;
  &.affix{
    background: #2d2d2d;
    border: none;
    transition: all 0.3ms;
    li a:hover{
      color: #999;
    }
  }
}

nav.navbar-custom .navbar-nav > li > a{
  color: #fff;
}
nav.navbar-custom .navbar-brand{
  color: #fff;
}
nav.navbar-custom.navbar-absolute{
  position: absolute;
}
.redefiningWebBlock{
  &__messageBlock{
    padding-left: 2rem;
    padding-right: 2rem;
  }
}
.servicesBlock{
  min-height: 80vh;
  background: rgba(0, 0, 0, 1);
  padding: 2em 0 1em 0;
}
.servicesBlock__titleBlock{
  color: #fff;
  margin-bottom: 5rem;
  padding: 0 2rem 0;
}
.servicesBlock__titleBlock p{
  color: #999;
}
.servicesBlock__iconsBlock section:first-child {
  @media all and (min-width: 768px){
    margin-bottom: 5em;
  }
}
.servicesBlock__iconsBlock p{
  color: #999;
}

.ourTeamBlock{
  height: 100%;
}
.ourTeamBlock__header{
  padding: 1em 0 4em 0;
}
.ourTeamBlock__social i{
  color: #5c1bb7;
}
.teamMember__name{
  color: #5c1bb7;
}
.teamMember__role{
  color: #800080;
}
.contactBlock{
  background: #222222;
  padding: 3em 0;
}
.contactBlock__title{
  color: #fff;
}
.contactBlock__title p{
  color: #999999;
}
.contactBlock__formBlock{
  margin-top: 2rem;
  @media all and (min-width: 768px){
    margin-top: 4rem;
  }
}
.contactBlock__formBlock--form .form-control {
  background: #333;
  color: #999;
  border: 0;
}
.contactBlock__formBlock--form .btn-transparent{
  border: 1px solid #999;
  color: #fff;
}
.contactBlock__contact strong{
  color: #fff;
}
.contactBlock__contact p{
  color: #999;
}
.contactBlock__contact i{
  color: #7b7b7b;
}
.contactBlock__contact--icons{
  margin-top: 1em;
}

.footerBlock{
  background: #1f1f1f;
  padding: 3em 0;
}
.footerBlock__menu--header{
  color: #fff;
}
.footerBlock__menu--items{
  color: #999;
  margin-top: 0.5em;
}

